# learning-robotic-perception-robops

./: .env.example  .gitignore  requirements.txt
.cursor/rules/: project-context.mdc
.dvc/: config
.github/workflows/: ci_deploy.yml  drift_check.yml  phase_b.yml
data/detr/: .gitignore  holdout.dvc
data/drift_baselines/: detr_v1_baseline.json
docker/: fastdds_no_shm.xml
docker/inference/: Dockerfile
docker/ros2-full-stack/: Dockerfile  entrypoint.sh
docker/ros2-stack/: Dockerfile  entrypoint.sh
docker/training/: Dockerfile  requirements-training.txt
docs/: DATASETS.md  NEXT_STEPS.md  OPTIONAL_AWS_CLEANUP.md  README.md  ROUND1_COMPLETION.md  SESSION_DONE_2026-05-15.md
docs/pipeline_plans/: 01_PHASE_A_DATA_INGESTION.md  02_PHASE_B_DATA_ENGINEERING.md  03_PHASE_C_TRAINING_DETR.md  04_PHASE_D_HUMAN_AUDIT.md  05_PHASE_E_DEPLOYMENT.md  06_PHASE_F_MONITORING.md
pipeline/phase_a/: README.md  mongo_writer.py  s3_uploader.py  setup_mongo_collections.py
pipeline/phase_b/: convert_to_mds.py  drift_gate.py  export_holdout.py  fiftyone_qa.py  generate_synthetic_mds.py  label_schema.yaml  publish_dataset.py  query_and_pull.py  roboflow_download.py
pipeline/phase_d/: eval_champion_challenger.py  eval_results.json  fiftyone_audit.py  generate_model_card.py  model_card.md  model_card_template.md  notify_audit.py  open_pr.py
pipeline/phase_e/: camera_bridge.py  camera_node_host_setup.sh  health_check.py  (+3 more)
ros2_ws/src/camera_node/: package.xml  setup.py
ros2_ws/src/camera_node/camera_node/: camera_node.py
ros2_ws/src/camera_node/config/: camera_params.yaml
(+24 files in other folders)
